# llm_research_hw2

./: .gitignore  README.md  eval.py  eval_results.json  eval_results_v2.json  generate_datasets.py  novel_ops.py  plot_eval.py  pyproject.toml  report.md  train.py
base/: __init__.py  data.py  env.py  verifier.py
tests/: test_novel_ops.py
