[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.0",
    "peft>=0.18.1",
    "transformers==4.56.2",
    "trl>=0.29.0",
    "vllm==0.12.0",
    "wandb>=0.25.0",
]
